Add timestamps to history/sets

--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@
   - Add changing the current program
 * Bugs:
   - Fix clicking settings multiple times
+  - Fix resetting timer if going to settings
+* Mark next weight bold
 * Add errors handling to HTTP calls
 * Add `apple-touch-icon`
 
