--- a/TODO
+++ b/TODO
@@ -4,13 +4,13 @@
   - Show progress of stats over time, by type (3x8, 5x5, etc)
 * Bugs
   - Sometimes it scrolls the whole screen instead of contents (history and progress views)
-  - Fix zooming when entering amraps in progress view
 * Add errors handling to HTTP calls
 * Allow to swap excercises in progress view
 * Add custom program WYSIWYG builder
 * Make serializing/deserializing safer
 * Allow to go back to history view without finishing the day
 * Provide a way to send feedback
+* Extract lens lib into a separate npm package
 * Add `apple-touch-icon`
 
     
