Add Dumbbell P/P/L program

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 * Programs
-  - Fitness Basic Beginner Routine
   - 5/3/1s
     - BBB
     - Building the monolith
@@ -15,6 +14,7 @@
 * Support kilograms
 * Provide a way to send feedback
 * Extract lens lib into a separate npm package
+* Add dumbbell/ez-bar to plates calculator
 * Add `apple-touch-icon`
 
     
