Add rollbar for error tracking

--- a/TODO
+++ b/TODO
@@ -16,5 +16,5 @@
 * Extract lens lib into a separate npm package
 * Add dumbbell/ez-bar to plates calculator
 * Add `apple-touch-icon`
-
+* Set up backups
     
