--- a/TODO
+++ b/TODO
@@ -12,8 +12,7 @@
 * Add custom program WYSIWYG builder
 * Support kilograms
 * Extract lens lib into a separate npm package
-* Add `apple-touch-icon`
 * Add exporting all data to downloadable CSV
-* Fix issues when history contains multiple programs
 * Add deleting account
+* Add achieves
     
