--- a/TODO
+++ b/TODO
@@ -16,11 +16,12 @@
 * Add deleting account
 * Add achievements
 * Fix completed criteria for AMRAP (they're now > 1, should be > reps)
+* Add autofocus on modal inputs
     
 * Add ability to drag-n-drop days and excercises.
 * Add ability to publish user programs
-* Add autofocus on modal inputs
 * Fix autocompletion of state. vars
-* Add autocompletion of functions
+* Add autocompletion of functions and bindings
 * Add syntax check for scripts on blur
 * Add playground to test scripts/days
+* Edit programs inline, without save buttons
