--- a/TODO
+++ b/TODO
@@ -15,10 +15,11 @@
 * Add achievements
 * Fix completed criteria for AMRAP (they're now > 1, should be > reps)
 * Add autofocus on modal inputs
+* Add cookie banner
     
 * Add ability to publish user programs
 * Fix autocompletion of state. vars
 * Add autocompletion of functions and bindings
 * Add syntax check for scripts on blur
-* Add playground to test scripts/days
 * Make sure it's safe to delete programs
+* Make sure it's safe to add excercise with empty sets
