Make sure migrations work find

--- a/TODO
+++ b/TODO
@@ -19,3 +19,4 @@
 * Add ability to publish user programs
 * Add changing program day when editing progress day
 * Versionize published programs
+* Highlight lb/kg properly in the editor
