--- a/TODO
+++ b/TODO
@@ -45,3 +45,8 @@
 - When you duplicate the exercise, it uses old one as a template
 - There's 'Use another exercise as a template' select box at the top of "Advanced" tab
 - If exercise template is selected, all the rest exercises
+
+
+## Broken experiences
+* Share on workout
+* Friends on workout
