Update some programs descriptions

--- a/programs/builtin/the5314b.md
+++ b/programs/builtin/the5314b.md
@@ -3,14 +3,131 @@ id: the5314b
 name: 5/3/1 For Beginners
 author: Jim Wendler
 url: "https://thefitness.wiki/routines/5-3-1-for-beginners"
-shortDescription: "A good \"next step\" program.  Do it after 3-9 months in gym."
+shortDescription: Beginner-friendly 3-day full-body program based on Jim Wendler's 5/3/1 system with FSL supplemental work.
 isMultiweek: true
 tags: []
 ---
 
-A very popular weight lifting routine - 5/3/1 by Jim Wendler, adapted for beginners.
+A 3-day full-body program that applies Jim Wendler's 5/3/1 methodology to beginners. Each session trains two main barbell lifts through the 5/3/1 rep scheme plus 5x5 First Set Last (FSL) supplemental sets, followed by push/pull/core assistance work for 50-100 reps per category.
 
-Good both for strength and size, it's well tested by time and helped thousands of lifters to achieve their goals
+<!-- more -->
+
+## Origin & Philosophy
+
+5/3/1 for Beginners is Jim Wendler's adaptation of his [5/3/1 system](https://www.jimwendler.com/blogs/jimwendler-com/101065094-5-3-1-for-a-beginner) for novice lifters. Wendler — a former Westside Barbell trainee who squatted 1,000 lbs — created 5/3/1 around one principle: start light and progress slowly. The standard 5/3/1 trains one main lift per day across 4 days. The beginner version condenses this to 3 full-body sessions with two main lifts per day, giving beginners more weekly practice with the big barbell movements while keeping the program simple.
+
+The Training Max (TM) concept is central to the system. You base all working weights on 90% of your actual 1RM, not your true max. This builds in a buffer so you're never grinding reps — every set should be fast, controlled, and with good form. Weight only goes up 5-10 lbs per 3-week cycle, which feels slow at first but compounds into serious strength over months.
+
+## Who It's For
+
+- **Experience level**: Beginner to intermediate (3-18 months of gym experience). You should be comfortable with [{Squat}], [{Bench Press}], [{Deadlift}], and [{Overhead Press}] form before starting.
+- **Primary goal**: Strength, with some muscle building from the FSL volume and assistance work.
+- **Best suited for**: Bulking or maintenance. Can work on a cut, but drop assistance volume to 25-50 reps per category if recovery is an issue.
+
+## Pros & Cons
+
+**Pros**
+
+- [{Squat}] and [{Bench Press}] are trained twice per week (Days 1 and 3), accelerating technique development for the two lifts beginners struggle with most
+- The Training Max system prevents you from ever loading too heavy — you always have reps in reserve, which builds confidence and reduces injury risk
+- FSL 5x5 adds meaningful volume at a manageable intensity (65-75% TM), reinforcing technique with submaximal loads
+- Only 3 days per week with sessions around 45-60 minutes — fits most schedules
+- AMRAP sets provide auto-regulation: good days you get extra reps, bad days you hit the minimum
+
+**Cons**
+
+- [{Deadlift}] and [{Overhead Press}] are only trained once per week (Day 2), which limits practice frequency for those movements
+- Weight increases are fixed (5/10 lbs per cycle regardless of AMRAP performance), so strong beginners may feel progression is too slow compared to programs like Starting Strength or GZCLP
+- Assistance work is intentionally vague ("50-100 reps of push/pull/core") — beginners who want more structure may feel lost on exercise selection
+- No built-in deload week in the 3-week cycle — you need to self-manage recovery or add a TM test week every 6-9 weeks
+
+## Program Structure
+
+- **Split**: Full body
+- **Periodization**: Weekly undulating periodization (5s week, 3s week, 5/3/1 week) with fixed progression per cycle
+- **Schedule**: Fixed weekly — Mon/Wed/Fri or any 3 non-consecutive days
+- **Typical week**: Day 1 (Squat + Bench) / Rest / Day 2 (Deadlift + OHP) / Rest / Day 3 (Bench + Squat) / Rest / Rest
+
+## Exercise Selection & Rationale
+
+**Day 1 and Day 3** pair [{Squat}] and [{Bench Press}] — the two lifts that benefit most from higher frequency. Beginners build squat and bench technique fastest when they practice 2x/week. Day 1 leads with squat; Day 3 leads with bench, so each lift gets one session as the "fresh" primary movement.
+
+**Day 2** covers [{Deadlift}] and [{Overhead Press}]. These are trained once weekly because deadlifts are more fatiguing per rep than squats (limiting recovery), and overhead press benefits from the bench volume on Days 1 and 3.
+
+**Assistance work** covers three categories to address what the main lifts miss:
+- **Push** ([{Push Up}], [{Triceps Dip}]): extra chest/tricep volume beyond bench and OHP
+- **Pull** ([{Chin Up}], [{Pull Up}], [{Inverted Row}]): horizontal and vertical pulling to balance all the pressing, plus bicep work
+- **Single Leg/Core** ([{Hanging Leg Raise}], [{Bulgarian Split Squat}]): direct ab training and unilateral leg work for balance and stability
+
+Assistance exercises can be freely swapped. Any push, pull, or single-leg/core movement works — the goal is total reps, not specific exercises.
+
+## Set & Rep Scheme
+
+**Main lifts** follow the 5/3/1 wave across 3 weeks, with all percentages based on your Training Max (90% of 1RM):
+- **Week 1 (5s)**: 1x5 @ 65%, 1x5 @ 75%, 1x5+ @ 85% TM
+- **Week 2 (3s)**: 1x3 @ 70%, 1x3 @ 80%, 1x3+ @ 90% TM
+- **Week 3 (5/3/1)**: 1x5 @ 75%, 1x3 @ 85%, 1x1+ @ 95% TM
+
+The final set each week is AMRAP — do as many reps as possible while maintaining bar speed and form. Don't grind reps to failure; stop when the bar slows significantly or form breaks down.
+
+**FSL (First Set Last)**: After the 3 working sets of each main lift, you go back to the weight from your first working set and perform 5 sets of 5 reps. The name "First Set Last" means you're repeating the first set's weight as your last sets. This gives you 5x5 at 65% TM in Week 1, 70% TM in Week 2, and 75% TM in Week 3. FSL serves as supplemental volume — it's light enough to practice technique with quality reps, but heavy enough to drive strength and muscle adaptation. This is the key difference from standard 5/3/1 templates that use heavier supplemental work like BBB (Boring But Big) or SSL (Second Set Last).
+
+**Assistance work**: 50-100 total reps per category (push/pull/single leg or core). Set and rep scheme is flexible — 5x10, 3x15, 10x5, or anything that gets you to the target reps.
+
+## Progressive Overload
+
+After completing each 3-week cycle, add weight to your Training Max:
+- **[{Squat}] and [{Deadlift}]**: +10 lbs
+- **[{Bench Press}] and [{Overhead Press}]**: +5 lbs
+
+These increments are fixed — your AMRAP performance doesn't change the amount you add. The slow, steady progression is by design.
+
+**When you stall**: If you can't hit the prescribed minimum reps (5/3/1) on your AMRAP sets for a full cycle, reduce your TM by 3 cycle increments (15 lbs for upper body, 30 lbs for lower body) and rebuild. Occasional bad sessions are normal — only adjust if an entire cycle is a struggle.
+
+**TM Test Week (optional deload)**: Every 2-3 cycles (6-9 weeks), take a test week. Work up to your TM for 3-5 reps. If you get 3+ reps, your TM is appropriate. If not, recalculate your TM from that performance. This replaces the older "deload every 4th week" approach.
+
+## How Long to Run It / What Next
+
+Run 5/3/1 for Beginners for **6-12 months** or until you've completed 8-12 cycles. The program works as long as you can consistently add weight to your TM every 3 weeks.
+
+**Signs it's time to move on**: You're no longer getting 3+ reps on AMRAP sets despite TM resets, you've been running it for 6+ months and want more variety, or your strength goals require more specialized programming.
+
+**Transition to**: **5/3/1 Boring But Big** (adds hypertrophy volume), **5/3/1 Building the Monolith** (brutally challenging intermediate program), or **GZCLP** (if you want a different progression model). Any standard 5/3/1 template from *5/3/1 Forever* is the natural next step.
+
+## Equipment Needed
+
+Barbell, squat rack, bench, and weight plates for the main lifts. The assistance work as written uses bodyweight exercises, so a pull-up bar is the only additional equipment needed.
+
+**If you don't have a pull-up bar**:
+- [{Chin Up}] / [{Pull Up}] → [{Bent Over Row, Dumbbell}] or [{Inverted Row}] (using a barbell in the rack)
+- [{Inverted Row}] → [{Bent Over Row}] with a barbell
+
+**Other assistance swaps**:
+- [{Triceps Dip}] → [{Bench Dip}] or [{Skullcrusher}]
+- [{Bulgarian Split Squat}] → [{Lunge}] or [{Goblet Squat}]
+
+## Rest Times
+
+- **Main working sets** (5/3/1 sets): **2-3 minutes**. Up to 5 minutes for the AMRAP set if needed.
+- **FSL 5x5 sets**: **90-120 seconds**. These should feel moderate, not maximal.
+- **Assistance work**: **60-90 seconds**. Can be supersetted between categories to save time (e.g., push ups between chin up sets).
+
+## How to Pick Starting Weights
+
+1. For each main lift, work up to a weight you can do for 3-5 clean reps with good bar speed
+2. Plug that weight and rep count into a 1RM calculator (e.g., weight x reps x 0.0333 + weight)
+3. Set your Training Max at **90% of that estimated 1RM**
+4. All working weights are calculated from your TM
+
+**Common mistake**: Using your actual 1RM as the Training Max instead of 90% of it. The whole system breaks down if your TM is too high — you'll grind reps instead of building speed and volume.
+
+## Common Modifications
+
+- **Add conditioning**: Wendler recommends light running or conditioning on 2-3 off days. Keep it easy — it shouldn't interfere with lifting.
+- **Swap assistance exercises freely**: The push/pull/single-leg categories are what matter, not the specific exercises. Rotate as desired.
+- **Reduce assistance to 25-50 reps** if sessions run long or recovery is an issue (especially when cutting).
+- **Add [{Face Pull}]** to the pull category for shoulder health — the program is pressing-heavy with bench 2x/week plus OHP.
+- **Move to 4-day 5/3/1** (one lift per day) once you've run the beginner version for 6+ months and want to add more supplemental or assistance volume per session.
 
 ```liftoscript
 # Week 1
@@ -18,7 +135,7 @@ Good both for strength and size, it's well tested by time and helped thousands o
 main / used: none / 1x5 58%, 1x5 67%, 1x5+ 76%, 5x5 58% / progress: custom(increment: 10lb) {~
   if (dayInWeek > 1 && week == 3) {
     rm1 += state.increment
-  } 
+  }
 ~}
 
 Squat[1-3] / ...main
