Update program index to include all metadata

--- a/programs/builtin/the5314b.md
+++ b/programs/builtin/the5314b.md
@@ -6,6 +6,10 @@ url: "https://thefitness.wiki/routines/5-3-1-for-beginners"
 shortDescription: Beginner-friendly 3-day full-body program based on Jim Wendler's 5/3/1 system with FSL supplemental work.
 isMultiweek: true
 tags: []
+frequency: 3
+age: "3_to_12_months"
+duration: "90+"
+goal: "strength"
 ---
 
 A 3-day full-body program that applies Jim Wendler's 5/3/1 methodology to beginners. Each session trains two main barbell lifts through the 5/3/1 rep scheme plus 5x5 First Set Last (FSL) supplemental sets, followed by push/pull/core assistance work for 50-100 reps per category.
