Add FAQ section for the program details pages

--- a/programs/builtin/the5314b.md
+++ b/programs/builtin/the5314b.md
@@ -133,6 +133,32 @@ Barbell, squat rack, bench, and weight plates for the main lifts. The assistance
 - **Add [{Face Pull}]** to the pull category for shoulder health — the program is pressing-heavy with bench 2x/week plus OHP.
 - **Move to 4-day 5/3/1** (one lift per day) once you've run the beginner version for 6+ months and want to add more supplemental or assistance volume per session.
 
+<!-- faq -->
+
+### Is 5/3/1 for Beginners good for beginners?
+
+Yes, it's Jim Wendler's adaptation of his 5/3/1 system for novice lifters. You should have 3-18 months of gym experience and be comfortable with squat, bench, deadlift, and overhead press form. It pairs two main lifts per session with bodyweight assistance work.
+
+### How many days a week is 5/3/1 for Beginners?
+
+It's a 3-day program trained on non-consecutive days, typically Monday/Wednesday/Friday. Day 1 pairs squat and bench, Day 2 pairs deadlift and overhead press, and Day 3 pairs bench and squat (reversed order from Day 1).
+
+### How does progression work on 5/3/1 for Beginners?
+
+After each 3-week cycle, add 10 lbs to your squat and deadlift Training Max and 5 lbs to your bench and overhead press Training Max. These fixed increments apply regardless of AMRAP performance. The slow progression is by design.
+
+### What is FSL in 5/3/1 for Beginners?
+
+FSL stands for First Set Last — after your 3 main working sets, you go back to the weight from your first working set and do 5 sets of 5 reps. This provides supplemental volume at a manageable intensity (65-75% of Training Max) for technique practice and strength building.
+
+### How long should I run 5/3/1 for Beginners?
+
+Run it for 6-12 months or 8-12 cycles. The program works as long as you can add weight to your Training Max every 3 weeks. Move on when AMRAP sets barely hit minimum reps despite TM resets, or when you want more variety.
+
+### What is the Training Max in 5/3/1?
+
+The Training Max (TM) is 90% of your true 1RM. All working percentages are based on this number, not your actual max. This builds in a buffer so you're never grinding reps — every set should be fast and controlled with good form.
+
 ```liftoscript
 # Week 1
 ## Day 1
