Add internal links in programs and sitemap.xml

--- a/programs/builtin/the5314b.md
+++ b/programs/builtin/the5314b.md
@@ -41,7 +41,7 @@ The Training Max (TM) concept is central to the system. You base all working wei
 **Cons**
 
 - [{Deadlift}] and [{Overhead Press}] are only trained once per week (Day 2), which limits practice frequency for those movements
-- Weight increases are fixed (5/10 lbs per cycle regardless of AMRAP performance), so strong beginners may feel progression is too slow compared to programs like Starting Strength or GZCLP
+- Weight increases are fixed (5/10 lbs per cycle regardless of AMRAP performance), so strong beginners may feel progression is too slow compared to programs like Starting Strength or [GZCLP](/programs/gzclp)
 - Assistance work is intentionally vague ("50-100 reps of push/pull/core") — beginners who want more structure may feel lost on exercise selection
 - No built-in deload week in the 3-week cycle — you need to self-manage recovery or add a TM test week every 6-9 weeks
 
@@ -96,7 +96,7 @@ Run 5/3/1 for Beginners for **6-12 months** or until you've completed 8-12 cycle
 
 **Signs it's time to move on**: You're no longer getting 3+ reps on AMRAP sets despite TM resets, you've been running it for 6+ months and want more variety, or your strength goals require more specialized programming.
 
-**Transition to**: **5/3/1 Boring But Big** (adds hypertrophy volume), **5/3/1 Building the Monolith** (brutally challenging intermediate program), or **GZCLP** (if you want a different progression model). Any standard 5/3/1 template from *5/3/1 Forever* is the natural next step.
+**Transition to**: [5/3/1 Boring But Big](/programs/the531bbb) (adds hypertrophy volume), [5/3/1 Building the Monolith](/programs/monolith531) (brutally challenging intermediate program), or [GZCLP](/programs/gzclp) (if you want a different progression model). Any standard 5/3/1 template from *5/3/1 Forever* is the natural next step.
 
 ## Equipment Needed
 
